feat: convert all DTOs to records and update usages